# RecoilEngine

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  conanfile.py
.github/determinism/: det_chkrec.lua  det_script.txt
.github/workflows/: claude-issue-triage.lock.yml  claude-issue-triage.md  claude-issue-triage.yml  determinism-x86.yml  engine-build.yml  engine-version-watch.yml  fightertest.yml  library-build.yml  macos-build-gpu.yml  macos-build-moltenvk.yml  macos-build.yml  onboard-new-version.yml  propagate-macos-layer.yml  release-build.yml  streflop-sync-crossarch.yml  synctest.yml  upstream-sync.yml  zink-probe.yml
.github/zink-probe/: egl_probe.c
AI/Interfaces/Java/: CMakeLists.txt
AI/Skirmish/: CMakeLists.txt
AI/Wrappers/CUtils/: CMakeLists.txt
AI/Wrappers/LegacyCpp/: AIAICallback.cpp  WeaponDef.h
coding-agents/: BACKWARDS_COMPATIBILITY.md  ENGINE_PERFORMANCE.md
cont/: CMakeLists.txt
cont/base/springcontent/: CMakeLists.txt
docker-build-v2/: README.md  build.sh  images_versions.sh
docker-build-v2/images/all/: conan-deps.sh
docker-build-v2/images/all-linux/: Dockerfile  toolchain.cmake
docker-build-v2/images/amd64-all/: conan_build_profile
docker-build-v2/images/amd64-linux/: build.sh  conan_profile
docker-build-v2/images/amd64-windows/: Dockerfile  build.sh  conan_profile  toolchain.cmake
docker-build-v2/scripts/: configure.sh  deps.sh
include/AL/: alext.h  efx.h
rts/: CMakeLists.txt
rts/ExternalAI/: AICallback.cpp  SSkirmishAICallbackImpl.cpp
rts/Game/: Game.cpp  GameControllerTextInput.cpp  GameHelper.cpp  GameVersion.h  GlobalUnsynced.cpp  GlobalUnsynced.h  LoadScreen.cpp  SyncedGameCommands.cpp  UnsyncedGameCommands.cpp
rts/Lua/: LuaConstCMD.cpp  LuaConstCOB.cpp  LuaConstEngine.cpp  LuaConstGame.cpp  LuaConstPlatform.cpp  LuaFonts.cpp  LuaGaia.cpp  LuaHandle.cpp  LuaHandle.h  LuaHandleSynced.h  LuaMenu.cpp  LuaOpenGL.cpp  LuaParser.h  LuaShaders.cpp  LuaSyncedCtrl.cpp  LuaSyncedCtrl.h  LuaSyncedRead.cpp  LuaSyncedRead.h  LuaUnsyncedCtrl.cpp  LuaUnsyncedCtrl.h  LuaUnsyncedRead.cpp  LuaUnsyncedRead.h  LuaUtils.cpp  LuaVBOImpl.cpp  LuaVFS.cpp
rts/Net/: AutohostInterface.cpp  AutohostInterface.h  CMakeLists.txt  GameServer.cpp  GameServer.h  NetCommands.cpp
rts/Rendering/: CMakeLists.txt  Screenshot.cpp  Screenshot.h  ShadowHandler.cpp  ShadowHandler.h
rts/Sim/: CMakeLists.txt
rts/Sim/Misc/: Team.h  (+8 more)
rts/System/: AABB.hpp  CMakeLists.txt  Color.h  ContainerUtil.h  Cpp23Compat.hpp  FastMath.h  GlobalRNG.h  Matrix44f.h  MemPoolTypes.h  Quaternion.cpp  Quaternion.h  SafeUtil.h  SpringApp.cpp  TemplateUtils.hpp  float3.h  simd_compat.h  type2.h
rts/builds/: CMakeLists.txt
rts/builds/legacy/: CMakeLists.txt
rts/lib/: CMakeLists.txt
test/: AGENTS.md  CMakeLists.txt
test/fightertest/: README.md  aircraft-startscript.txt  bots-startscript.txt  pathfinding-startscript.txt  startscript.txt  tanks-startscript.txt
test/synctest/: README.md  synctest-startscript.txt
tools/DemoTool/: CMakeLists.txt
tools/unitsync/: CMakeLists.txt
(+213 files in other folders)
